--- a/project.html
+++ b/project.html
@@ -117,8 +117,7 @@
     #floorSelector {
       position: fixed;
       bottom: 10px;
-      right: 10px;
-      text-align: right;
+      right: 20%;
     }
 
     #floorSelector button {
