--- a/project.html
+++ b/project.html
@@ -189,12 +189,12 @@
     <h1>厕所检测中心</h1>
   </button>
   <div id="floorContainer">
-    <img class="floor-plan" id="floor1" src="C:\Users\wisdy\Desktop\textzp\1.jpg" alt="1楼平面图">
-    <img class="floor-plan" id="floor2" src="C:\Users\wisdy\Desktop\textzp\2.jpg" alt="2楼平面图">
-    <img class="floor-plan" id="floor3" src="C:\Users\wisdy\Desktop\textzp\3.jpg" alt="3楼平面图">
-    <img class="floor-plan" id="floor4" src="C:\Users\wisdy\Desktop\textzp\4.jpg" alt="4楼平面图">
-    <img class="floor-plan" id="floor5" src="C:\Users\wisdy\Desktop\textzp\5.jpg" alt="5楼平面图">
-    <img class="floor-plan" id="floor6" src="C:\Users\wisdy\Desktop\textzp\6.jpg" alt="6楼平面图">
+    <img class="floor-plan" id="floor1" src="https://github.com/lingken1028/project/blob/main/1.jpg?raw=true" alt="1楼平面图">
+    <img class="floor-plan" id="floor2" src="https://github.com/lingken1028/project/blob/main/2.jpg?raw=true" alt="2楼平面图">
+    <img class="floor-plan" id="floor3" src="https://github.com/lingken1028/project/blob/main/3.jpg?raw=true" alt="3楼平面图">
+    <img class="floor-plan" id="floor4" src="https://github.com/lingken1028/project/blob/main/4.jpg?raw=true" alt="4楼平面图">
+    <img class="floor-plan" id="floor5" src="https://github.com/lingken1028/project/blob/main/5.jpg?raw=true" alt="5楼平面图">
+    <img class="floor-plan" id="floor6" src="https://github.com/lingken1028/project/blob/main/6.jpg?raw=true" alt="6楼平面图">
     <span class="s">
       <div id="toilet1" style="left: 6.5%; top:12%;" ></div>
       <div id="toilet2" style="right: 6.5%; top:17%;"></div>
