--- a/project1.html
+++ b/project1.html
@@ -313,7 +313,8 @@
     #i{
       display: flex; /* 或者使用 display: inline-block; */
       position: fixed;
-      left: 20%;
+      left: 23%;
+      top:4%;
     }
     #img{
       background-color: transparent;
