--- a/project.html
+++ b/project.html
@@ -285,7 +285,7 @@
       line-height:55px;
     }
     #announcement {
-      position: fixed; 
+      position:absolute; 
       top: 20px; 
       right: 10%; 
       width: 70%; 
