--- a/project1.html
+++ b/project1.html
@@ -318,7 +318,7 @@
     #i{
       display: flex; /* 或者使用 display: inline-block; */
       top: 4%;
-      position: fixed;
+      position: absolute;
       left: 20%;
     }
     #img{
