--- a/project.html
+++ b/project.html
@@ -312,7 +312,7 @@
     #i{
       display: flex; /* 或者使用 display: inline-block; */
       top: 4%;
-      position: absolute;
+      position: fixed;
       left: 20%;
     }
     #img{
