--- a/project1.html
+++ b/project1.html
@@ -369,7 +369,7 @@
 <body>
   <img id="bgvid" src="https://cdn.pixabay.com/photo/2017/02/08/12/46/moon-2048727_1280.jpg">
   <button id="fileInput" style="background-color: rgba(83, 255, 218, 0);">
-    <h1>厕所检测中心</h1>
+    <h1>衛生間衛生紙管理中心</h1>
   </button>
   <div id="announcement">
     <marquee id="announcementText" direction="up" behavior="scroll" scrollamount="2">
